# neo4j-agent-integrations

./: .coverage  .gitignore  README.md  pyproject.toml
pss-drift-detection/: .coverage  .gitignore  README.md  pyproject.toml
pss-drift-detection/docs/: API.md  IMPLEMENTATION_PLAN.md  demo_queries.md  demo_redesign_plan.md  plans.md
pss-drift-detection/pss-test-data/: .env.example  Makefile  README.md
pss-drift-detection/pss-test-data/backend/: pyproject.toml
pss-drift-detection/pss-test-data/frontend/: package.json
pss-drift-detection/schema/: pss_schema.cypher
pss-drift-detection/scripts/: interactive_demo.py  seed_test_data.py
pss-drift-detection/src/analytics/: deduplication.py  trajectories.py
pss-drift-detection/src/core/: drift_detector.py  pss_client.py
pss-drift-detection/src/mcp/: pss_mcp_server.py
pss-drift-detection/src/network/: cluster_manager.py
pss-drift-detection/src/persistence/: adapter.py  base.py  models.py  neo4j_memory_store.py  neo4j_phase_store.py
pss-drift-detection/src/pss_drift_detection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pss-drift-detection/tests/: conftest.py  test_analytics.py  test_drift_detection.py  test_drift_event_store.py  test_mcp_tools.py  test_memory_store.py  test_multi_agent.py  test_scenario3_cluster.py  test_scenario4_safety.py  test_scenario5_consensus.py  test_scenario6_handoff.py  test_session_store.py  test_state_store.py
semvec-drift-detection/: .env.example  .gitignore  README.md  pyproject.toml
semvec-drift-detection/docs/: API.md
semvec-drift-detection/healthcare-fixtures/: README.md
semvec-drift-detection/healthcare-fixtures/data/: fixtures.json
semvec-drift-detection/schema/: semvec_schema.cypher
semvec-drift-detection/scripts/: demo_helpers.py  interactive_demo.py  seed_test_data.py
semvec-drift-detection/src/core/: drift_detector.py  embedder.py  (+1 more)
semvec-drift-detection/tests/: test_analytics.py  test_cluster_store.py  test_demo_helpers.py  test_embedder.py  test_mcp_tools.py  test_scenario3_cluster.py  test_scenario4_safety.py  test_scenario6_handoff.py  test_semvec_client.py
(+105 files in other folders)
