[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semvec-drift-detection"
version = "0.2.0"
description = "Semvec drift-detection integration for the Neo4j agent ecosystem"
requires-python = ">=3.10"
dependencies = [
    "semvec>=0.5",
    "neo4j>=5.11",
    "numpy>=1.24",
    "sentence-transformers>=2.2",
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "testcontainers[neo4j]>=3.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests requiring a running Neo4j instance",
    "e2e: marks end-to-end tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "benchmarks/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
